RESOLVED FIXED296201
[shape-outside] Fix /css/css-shapes/shape-outside/shape-image/gradients/shape-outside-linear-gradient-005/006/007/009/010/
https://bugs.webkit.org/show_bug.cgi?id=296201
Summary [shape-outside] Fix /css/css-shapes/shape-outside/shape-image/gradients/shape...
alan
Reported 2025-07-18 12:15:40 PDT
ssia
Attachments
Patch (18.81 KB, patch)
2025-07-18 12:27 PDT, alan
no flags
Patch (18.81 KB, patch)
2025-07-18 12:53 PDT, alan
no flags
Patch (18.85 KB, patch)
2025-07-18 18:40 PDT, alan
no flags
[fast-cq]Patch (18.84 KB, patch)
2025-07-19 07:15 PDT, alan
no flags
alan
Comment 1 2025-07-18 12:27:53 PDT
alan
Comment 2 2025-07-18 12:53:00 PDT
alan
Comment 3 2025-07-18 18:40:14 PDT
Simon Fraser (smfr)
Comment 4 2025-07-18 19:58:11 PDT
Comment on attachment 476100 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=476100&action=review > Source/WebCore/rendering/shapes/ShapeOutsideInfo.cpp:282 > + RefPtr<Image> image = styleImage->image(const_cast<RenderBox*>(&renderer), physicalImageSize); `RefPtr image = `
alan
Comment 5 2025-07-19 07:15:14 PDT
Created attachment 476105 [details] [fast-cq]Patch
EWS
Comment 6 2025-07-19 08:46:46 PDT
Committed 297640@main (b7c28289121c): <https://commits.webkit.org/297640@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 476105 [details].
Radar WebKit Bug Importer
Comment 7 2025-07-19 08:47:13 PDT
Tim Nguyen (:ntim)
Comment 8 2025-08-22 11:12:01 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/54465
Note You need to log in before you can comment on or make changes to this bug.