[shape-outside] Fix /css/css-shapes/shape-outside/shape-image/gradients/shape-outside-linear-gradient-005/006/007/009/010/ https://bugs.webkit.org/show_bug.cgi?id=296201

Reviewed by Simon Fraser.

This change implements vertical support for gradient type of shape-outside.

1. Rename variables to indicate whether they represent logical or physical space (mostly logical)
2. Use physical coordinates to create the image (this fixes clipping issues where we ended up missing image content)
3. Use logical coordinates to construct a _logical coord_ based interval structure. This interval data is input to float layout which expects logical coords.
(The real fix here is the pixelPosition line where we look at the physical image in the context of logical coordinates. i.e. when we probe the "first" pixel
in vertical mode, we actually look at the top right corner of the physical image)

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-outside/shape-image/gradients/shape-outside-linear-gradient-005.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-outside/shape-image/gradients/shape-outside-linear-gradient-006.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-outside/shape-image/gradients/shape-outside-linear-gradient-007.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-outside/shape-image/gradients/shape-outside-linear-gradient-009.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-outside/shape-image/gradients/shape-outside-linear-gradient-010.html:
* Source/WebCore/rendering/shapes/LayoutShape.cpp:
(WebCore::LayoutShape::createRasterShape):
* Source/WebCore/rendering/shapes/LayoutShape.h:
* Source/WebCore/rendering/shapes/ShapeOutsideInfo.cpp:
(WebCore::makeShapeForShapeOutside):

Canonical link: https://commits.webkit.org/297640@main